--- a/Michal/src/components/content/manager.scss
+++ b/Michal/src/components/content/manager.scss
@@ -82,10 +82,11 @@
 
 .headline {
   text-align: center;
+  width: 90%;
 }
 
 .headline h1 {
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   font-weight: 500;
   color: colors.$neutral_navy;
 }
