--- a/Michal/src/components/content/manager.scss
+++ b/Michal/src/components/content/manager.scss
@@ -27,7 +27,6 @@
 
 .manager-image-right {
   height: 100%;
-  width: 100%;
   position: absolute;
   top: 11%;
   left: 50%;
@@ -35,8 +34,7 @@
 }
 
 .image-tab-right {
-  width: 100%;
-  height: 140%;
+  height: 250px;
   object-fit: contain;
   border-radius: 10%;
 }
@@ -112,4 +110,38 @@
 
 .space {
   margin-top: 6rem;
+}
+
+@media only screen and (min-width: 815px) {
+  .manager-info-wrapper {
+    margin-left: 5%;
+  }
+
+  .headline h1 {
+    font-size: 3rem;
+    text-align: left;
+  }
+
+  .description p {
+    font-size: 1.2rem;
+    text-align: left;
+  }
+
+  .manager-button-wrapper {
+    justify-content: flex-start;
+    gap: 20px;
+    padding-left: 4.5%;
+  }
+  .manager-button-wrapper button {
+    width: 30%;
+  }
+
+  .image-background-right {
+    height: 300px;
+    border-radius: 40% 0 0 40%;
+  }
+
+  .image-tab-right {
+    height: 400px;
+  }
 }
