--- a/Michal/src/App.css
+++ b/Michal/src/App.css
@@ -4,4 +4,9 @@
     display: flex;
     flex-direction: row-reverse;
   }
+  .info-section-2 {
+    width: 100%;
+    display: flex;
+    margin-top: 30px;
+  }
 }
