--- a/Michal/src/components/content/card.scss
+++ b/Michal/src/components/content/card.scss
@@ -46,3 +46,20 @@
   width: 80%;
   margin-bottom: 24px;
 }
+
+@media only screen and (min-width: 815px) {
+  .card-wrapper {
+    flex-direction: row;
+    gap: 35px;
+  }
+
+  .card-container {
+    width: 20%;
+  }
+
+  @for $i from 1 through 3 {
+    .card-container:nth-child(#{$i}) {
+      margin-top: #{($i - 1) * 60}px;
+    }
+  }
+}
