Fully made visual changes

--- a/Michal/src/components/newslatter/newslatter.scss
+++ b/Michal/src/components/newslatter/newslatter.scss
@@ -34,6 +34,10 @@
   margin-bottom: 35px;
 }
 
+.newslatter-form-wrapper {
+  text-align: center;
+}
+
 @media only screen and (min-width: 815px) {
   .newslatter-wrapper h1 {
     width: 23rem;
