--- a/Michal/src/components/footer/footer.scss
+++ b/Michal/src/components/footer/footer.scss
@@ -25,3 +25,32 @@
   gap: 60px;
   margin-bottom: 40px;
 }
+
+@media only screen and (min-width: 815px) {
+  .footer-wrapper {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+
+  .footer-icons {
+    width: auto;
+    margin: 0;
+  }
+
+  .footer-options {
+    display: flex;
+    gap: 30px;
+    padding: 0;
+    margin: 0;
+  }
+
+  .footer-options p {
+    padding: 0;
+  }
+
+  .logo-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+  }
+}
