--- a/Michal/src/components/content/chapter.scss
+++ b/Michal/src/components/content/chapter.scss
@@ -21,6 +21,11 @@
   border-bottom: 1px solid #dedde3;
 }
 
+.chapter-active {
+  font-weight: 600;
+  border-bottom: 1px solid rgb(242, 95, 58);
+}
+
 @media only screen and (min-width: 815px) {
   .chapter-wrapper {
     flex-direction: row;
