--- a/Michal/src/components/newslatter/newslatter.scss
+++ b/Michal/src/components/newslatter/newslatter.scss
@@ -38,6 +38,19 @@
   text-align: center;
 }
 
+.error-text {
+  background-color: #fb5859;
+  border-radius: 0 0 10px 10px;
+  font-size: 0.8rem;
+  padding: 7px;
+}
+
+.error-icon {
+  position: relative;
+  top: -63%;
+  right: -40%;
+}
+
 @media only screen and (min-width: 815px) {
   .newslatter-wrapper h1 {
     width: 23rem;
@@ -45,7 +58,8 @@
   }
 
   .newslatter-wrapper input {
-    width: 65%;
+    width: 100%;
+    height: 2.2rem;
     margin: 0;
   }
   .newslatter-wrapper button {
@@ -57,9 +71,9 @@
   .newslatter-form-wrapper {
     display: flex;
     text-align: center;
-    align-items: center;
     margin-bottom: 4rem;
-    width: 23rem;
+    width: 20rem;
     justify-content: space-between;
+    gap: 20px;
   }
 }
